--- a/TP3/Report/CC-TP3-PL26.tex
+++ b/TP3/Report/CC-TP3-PL26.tex
@@ -187,4 +187,91 @@ Tendo problemas com esse endereço, é possível contactar o servidor web \textb
 \textbf{R:}
 
 
+\newpage
+
+\section{Demonstração do funcionamento do domínio de nomes CC.pt}
+
+Nesta secção do trabalho apresentamos umas imagens que demonstram os testes realizados aos servidores primário e secundário na tentativa de ver que estes se encontravam a funcionar corretamente.
+
+Os testes que trazemos são baseados no que o enunciado pretende. Todas as configurações que necessitamos de fazer para ambos os servidores encontram-se nas pastas \textbf{primario} e \textbf{secundario}.
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.75]{teste1.png}
+\end{center}
+\caption{\label{fig:t1}Exemplo de Teste duma query ao servidor}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.75]{teste2.png}
+\end{center}
+\caption{\label{fig:t2}Exemplo de Teste duma query ao servidor}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.75]{teste3.png}
+\end{center}
+\caption{\label{fig:t3}Exemplo de Teste duma query ao servidor}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.75]{teste4.png}
+\end{center}
+\caption{\label{fig:t4}Exemplo do comando \textbf{dig} para um servidor Web }
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.75]{teste5.png}
+\end{center}
+\caption{\label{fig:t5}Exemplo de Teste duma query ao servidor secundário}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.75]{teste6.png}
+\end{center}
+\caption{\label{fig:t6}Exemplo de Teste duma query ao servidor secundário}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.75]{teste7.png}
+\end{center}
+\caption{\label{fig:t7}Query do tipo SOA ao servidor.}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.75]{teste8.png}
+\end{center}
+\caption{\label{fig:t8}Teste ao serviço de mail}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.75]{teste9.png}
+\end{center}
+\caption{\label{fig:t9}Teste às funcionalidades do Servidor2}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.75]{teste10.png}
+\end{center}
+\caption{\label{fig:t10}Teste ao Cliente1}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.75]{teste11.png}
+\end{center}
+\caption{\label{fig:t11}Teste aos Hosts da zona 3}
+\end{figure}
+
+
+
 \end{document}
