report TP2: Intro

--- a/TP2/Report/CC-TP2-PL26.tex
+++ b/TP2/Report/CC-TP2-PL26.tex
@@ -55,8 +55,7 @@ PL2, Grupo 6
 
 \section{Introdução}
 
-////////////////////////////////////// FALTA FAZER //////////////////////////////////////
-
+Neste relatório são apresentadas as informações e decisões tomadas relativamente ao projeto no qual o objetivo era criar um serviço de transferência fiável de dados sobre o protocolo UDP. São abordados temas como, por exemplo, o formato das mensagens PDU, as interações entre os end-systems, a arquitetura criada para a implementação e o controlo de fluxo e de congestão nas transferências de dados. Estão também presentes testes e resultados, assim como uma secção de conclusões.
 
 
 \section{Especificação do protocolo}
