--- a/TP2/Report/CC-TP2-PL26.tex
+++ b/TP2/Report/CC-TP2-PL26.tex
@@ -101,13 +101,19 @@ Por último, o campo \textbf{checksum} leva um inteiro (long), relativo ao cálc
 
 \subsubsection{Início de Conexão}
 
+\hspace{20.0cm}
+
 Para ocorrer uma transferência de dados entre dois end-systems é necessário que exista inicialmente um estabelecimento de conexão. Quem pretende iniciar uma conexão envia um \textbf{syn} para o destino, na esperança de receber um \textbf{synack} do servidor ao qual se liga. Seguidamente o cliente envia também um \textbf{ack} a confirmar o estabelecimento da conexão. Desta forma, com este processo tornamos a comunicação orientada à conexão, e portanto, mais controlada.
 
 \subsubsection{Transferência de Ficheiro}
 
+\hspace{20.0cm}
+
 Depois de estabelecida a conexão, é realizado o envio dos dados por parte do servidor tendo em conta os parâmetros estabelecidos, como por exemplo a janela de receção de dados e o MSS. Nesta fase existe também muita interação entre os dois end-systems, pois após a tentativa de envio do servidor, o cliente têm que enviar um ack para confirmar a receção dos dados. Existe a possibilidade deste não chegar ao destino devido a congestionamentos na camada de Rede, de tal forma que nesta fase existem também retransmissões, caso necessário.
 
 \subsubsection{Fim de Conexão}
+
+\hspace{20.0cm}
 
 Devido a estarmos perante uma comunicação orientada à conexão, é necessário que, depois da transferência dos dados, esta seja terminada. No nosso modelo tal acontece da seguinte forma: servidor enviar \textbf{fin} para o cliente a sinalizar que terminou a transferência dos dados; cliente responde com \textbf{finack} para sinalizar receção do fin; servidor envia \textbf{ack} para sinalizar que recebeu a confirmação do fecho da conexão do lado do cliente.
 
@@ -152,6 +158,8 @@ O \textbf{TransfereCC} tem um função que passa por receber datagramas provenie
 
 \subsubsection{Download}
 
+\hspace{20.0cm}
+
 Em caso de Download é criada uma única Thread que irá tratar de todo este processo correspondente à classe \textbf{ThreadDownload} que se encontra no ficheiro \textbf{ThreadDownload.java}.
 
 Esta Thread tem 3 principais estados que são o início de conexão, a transferência de dados relativos ao ficheiro, e o fim da conexão.
@@ -164,6 +172,8 @@ No final junta tudo o que recebeu e cria um novo ficheiro com o nome passado com
 
 
 \subsubsection{Upload}
+
+\hspace{20.0cm}
 
 Em caso de Upload o processo é um pouco mais complexo que em caso de Download pois vai requerer um maior esforço por parte do \textbf{TransfereCC}, pois vai ter de manter um \textbf{Map} associando um \textbf{IP} à Thread que trata do mesmo e tendo que entregar datagramas a estas Threads.
 
@@ -204,9 +214,29 @@ Este estado alberga todas as burocracias que não devem ser mantidas pelas Threa
     private int timeout_count;
 \end{lstlisting}
 
+É no estado que são mantidos mecanismos de sequenciação, dados pelos parâmetros \textbf{sequence\_number}, \textbf{first\_data\_seq\_number}, \textbf{ack\_number} e \textbf{first\_data\_ack\_number}. Estes valores são acedidos pelas Threads para preencherem corretamente os valores dos campos dos PDUs.
+
+Existem um campo que mantém o tamanho do \textbf{MSS} que porventura é sempre fixo e igual a 1024.
+
+Existe a variável \textbf{receiveWindow} que contém o valor da janela associada ao controlo de fluxo. Este valor para o fluxo foi calculado tendo em conta o buffer de receção que tinha um espaço de 66560 bytes que dividindo por um segmento de 1024 bytes e tirando 10 (por precaução) devido a possíveis segmentos de tamanho maior, resulta numa janela de \textbf{55}.
+
+Existe ainda um conjunto de variáveis associado ao controlo de fluxo. São nomeadamente \textbf{cc\_phase}, que nos dá o estado da congestão, \textbf{dupAckCount} que conta o número de ACKs duplicados, \textbf{ssthresh} que representa o threshold e por último a \textbf{congestionWindow} que representa o valor inteiro da janela de congestão.
+
+Ora o valor de janela passado às Threads para elas trabalharem baseia-se no mínimo da janela de fluxo e da janela de congestão.
+
+O estado contém ainda variáveis que tratam de valores de timeouts. Elas são nomeadamente o \textbf{timeout} que representa o valor do timeout em milissegundos, o \textbf{estimatedRTT} que representa o valor estimado do RTT, o \textbf{devRTT} que representa o desvio em milissegundos que o RTT pode assinalar e o \textbf{timeout\_count}.
+
+Inicialmente, antes de existir qualquer conexão o valor do timeout é de 3000 milissegundos (3 segundos),  após existir comunicação é retirado o RTT da primeira troca de PDUs e o valor do timeout passa a ser fixo mas com um valor mais aproximado da realidade. Ao fim de 3 tiemouts a conexão é desfeita e terminada.
+
+
 
 \subsection{AgenteUDP}
 
+O \textbf{AgenteUDP} é um Thread com a única função de receber Datagramas provenientes da rede, e enviar Datagramas para a rede. Existe apenas uma Thread deste género independentemente do número de conexões existentes.
+
+Todas as Threads que estão encarregues de enviar PDUs para a rede contactam esta classe presente no ficheiro \textbf{AgenteUDP.java}. As comunicações são sempre feitas num socket cuja porta é \textbf{7777}.
+
+Recebendo PDUs das várias Threads esta classe tem ainda a função de serializá-los, para ser possível criar datagramas e enviá-los para a rede.
 
 
 
